Quick changes to Lane's bio.

--- a/meet-the-staff.html
+++ b/meet-the-staff.html
@@ -240,13 +240,14 @@
                         - Kansas State University -<br />
                         Lane grew up in Carbondale, Kansas and discovered his
                         passion for golf as a freshman at Santa Fe Trail High
-                        School. During Lane's senior year he and his team went
-                        on to win the 3A State Championship and followed that up
-                        with an invitation to compete in the High School
-                        National Invitational. After high school, Lane continued
-                        his golf career at Coffeyville Community College before
-                        transferring to Kansas State University, where he
-                        graduated with a bachelor’s in marketing. "EMAW!"
+                        School. During Lane's senior year, he and his team went
+                        on to win the 3A State Golf Championship, an achievement
+                        that earned him an invitation to compete in the High
+                        School National Invitational. After high school, Lane
+                        continued his golf career at Coffeyville Community
+                        College before transferring to Kansas State University,
+                        where he graduated with a bachelor’s in marketing.
+                        "EMAW!"
                       </div>
                       <div class="grad"></div>
                     </div>
