Added notice to News section, re: closing for rail road construction.

--- a/index.html
+++ b/index.html
@@ -239,6 +239,30 @@
         >
           <div class="col-md-6 col-sm-12">
             <div class="single-blog-area-start border-left">
+              <div class="image-area">
+                <img
+                  loading="lazy"
+                  rel="preload"
+                  src="assets/images/news/train.jpg"
+                  alt=""
+                />
+              </div>
+
+              <div class="inner-content-area d-flex">
+                <div class="top-area">
+                  <h3 class="title animated fadeIn">Closing for a Day</h3>
+
+                  <p>
+                    Stagg Hill will be closed on
+                    <span class="highlighted">August 25th</span> due to rail
+                    road construction.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-sm-12">
+            <div class="single-blog-area-start border-left">
               <a
                 href="/assets/pdfs/Stagg-Hill-Short-Game-Render.pdf"
                 target="_blank"
@@ -265,13 +289,7 @@
                       donations to help us accomplish this goal!
                     </p>
                     <!-- <hr /> -->
-                    <h6>
-                      <img
-                        src="assets/images/icons/layer.svg"
-                        class="stack injectable"
-                        alt=""
-                      />Donation Tiers
-                    </h6>
+                    <h6>Donation Tiers</h6>
                     <div class="row flex-row donation-row">
                       <div>Par</div>
                       <div class="spanner"></div>
@@ -338,6 +356,7 @@
                     <h3 class="title animated fadeIn">New Pro Shop Page!</h3>
 
                     <p>Click <u>here</u> to check out the new pro shop page.</p>
+                    <hr />
                     <div class="specials">
                       <h5>
                         <img
@@ -731,7 +750,10 @@
             <div
               class="single-solution-style-one border-left border-bottom-1 h-100"
             >
-              <a href="https://www.facebook.com/mcgrawsmanhattan/" target="_blank">
+              <a
+                href="https://www.facebook.com/mcgrawsmanhattan/"
+                target="_blank"
+              >
                 <img
                   src="./assets/images/logo/businesses/mcgraws.svg"
                   class="logo mcgraws"
