Added pro shop special to Pro Shop page.

--- a/pro-shop.html
+++ b/pro-shop.html
@@ -79,6 +79,9 @@
     <!-- rts banner four end -->
 
     <section class="pro-shop-body">
+      <div class="container container-of-a-pro-shop-special">
+        <img src="images/pro-shop-special.jpg" alt="" />
+      </div>
       <div class="band-of-brands">
         <div class="container">
           <div class="row justify-content-around g-5 g-md-0">
@@ -122,10 +125,9 @@
             class="col-12 col-md-6 d-flex height-100 wow fadeInUp"
             data-wow-offset="120"
             data-wow-delay=".1s"
-            
           >
-            <div class="row flex-column g-4 g-md-5" >
-              <div class="col-12" style="flex-grow: 1;">
+            <div class="row flex-column g-4 g-md-5">
+              <div class="col-12" style="flex-grow: 1">
                 <div class="initial-note">
                   <p class="shop-note">
                     All the brands above are available in the golf shop and we
@@ -297,110 +299,6 @@
         </div>
       </div>
     </section>
-
-    <!-- <section
-      class="rts-blog-area rts-section-gap position-relative homepage-notices pro-shop-notices mt-5"
-    >
-      <div class="container">
-        <div
-          class="row g-5 wow fadeInUp"
-          data-wow-offset="120"
-          data-masonry='{"percentPosition": true }'
-          style="visibility: visible; animation-name: fadeInUp"
-        >
-          <div class="col-md-6 col-sm-12">
-            <div class="single-blog-area-start">
-              <a href="blog-details.html" class="thumbnail">
-                <div class="image-area">
-                  <img
-                    loading="lazy"
-                    rel="preload"
-                    src="images/callaway-notice.jpg"
-                    alt=""
-                  />
-                </div>
-
-                <div class="inner-content-area d-flex">
-                  <div class="top-area">
-                    <h3 class="title animated fadeIn">Customize Your Dozens</h3>
-                    <h6>Buy three customized dozens, get one free!</h6>
-                    <p>
-                      Use the promo code
-                      <span class="highlighted">202557700</span>
-                      in this link and place your order. An $8 shipping charge
-                      will be added to each order.
-                    </p>
-                  </div>
-                  <div class="row link-bar flex-row">
-                    <div>Place your order</div>
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="32"
-                      height="32"
-                      viewBox="0 0 32 32"
-                    >
-                      <path
-                        d="M9.3335 22.6667L22.6668 9.33337M22.6668 9.33337H9.3335M22.6668 9.33337V22.6667"
-                        stroke="#999999"
-                        stroke-width="1.5"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                      ></path>
-                    </svg>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-sm-12">
-            <div class="single-blog-area-start">
-              <a href="https://www.usga.org/content/usga/home-page/handicapping/world-handicap-system/2024-revision.html" class="thumbnail h-100">
-                <div class="image-area">
-                  <img
-                    loading="lazy"
-                    rel="preload"
-                    src="images/handi.jpg"
-                    alt=""
-                  />
-                </div>
-
-                <div class="inner-content-area d-flex">
-                  <div class="top-area">
-                    <h3 class="title animated fadeIn">
-                      Renew Your Handicap Online
-                    </h3>
-
-                    <p>
-                      You can now renew your handicap through Stagg Hill online.
-                      You can also join online, if you have never had a handicap
-                      index before.
-                    </p>
-                  </div>
-                  <div class="row link-bar flex-row">
-                    <div>Click to renew with us</div>
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="32"
-                      height="32"
-                      viewBox="0 0 32 32"
-                    >
-                      <path
-                        d="M9.3335 22.6667L22.6668 9.33337M22.6668 9.33337H9.3335M22.6668 9.33337V22.6667"
-                        stroke="#999999"
-                        stroke-width="1.5"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                      ></path>
-                    </svg>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
 
     <!-- cta area start -->
     <section class="cta blonde">
