--- a/calendar.html
+++ b/calendar.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Luminos - IT solutions for a growing businesses."
+      content="Up-and-coming events at Stagg Hill Golf Club."
     />
     <link
       rel="shortcut icon"
@@ -22,18 +22,12 @@
     />
     <link
       rel="stylesheet preload"
-      href="assets/css/plugins/fontawesome.css"
-      as="style"
-      media="print"
-      onload="this.media='all'"
-    />
-    <link
-      rel="stylesheet preload"
       href="assets/css/plugins/metismenu.css"
       as="style"
       media="print"
       onload="this.media='all'"
     />
+     
     <link rel="stylesheet preload" href="css/style.css" as="style" />
 
     <!-- header Lit component -->
