--- a/open-tournaments.html
+++ b/open-tournaments.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Luminos - IT solutions for a growing businesses."
+      content="Tournaments for members and non-members alike at Stagg Hill Golf Club."
     />
     <link
       rel="shortcut icon"
@@ -23,18 +23,12 @@
     />
     <link
       rel="stylesheet preload"
-      href="assets/css/plugins/fontawesome.css"
-      as="style"
-      media="print"
-      onload="this.media='all'"
-    />
-    <link
-      rel="stylesheet preload"
       href="assets/css/plugins/metismenu.css"
       as="style"
       media="print"
       onload="this.media='all'"
     />
+     
     <link rel="stylesheet preload" href="css/style.css" as="style" />
 
     <!-- header Lit component -->
