--- a/pro-shop.html
+++ b/pro-shop.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Luminos - IT solutions for a growing businesses."
+      content="Check out the deals in the Pro Shop at Stagg Hill Golf Club."
     />
     <link
       rel="shortcut icon"
@@ -22,18 +22,12 @@
     />
     <link
       rel="stylesheet preload"
-      href="assets/css/plugins/fontawesome.css"
-      as="style"
-      media="print"
-      onload="this.media='all'"
-    />
-    <link
-      rel="stylesheet preload"
       href="assets/css/plugins/metismenu.css"
       as="style"
       media="print"
       onload="this.media='all'"
     />
+    
     <link rel="stylesheet preload" href="css/style.css" as="style" />
 
     <!-- header Lit component -->
@@ -436,15 +430,7 @@
 
     <script defer src="assets/js/plugins/svg-inject.js"></script>
     <script defer src="assets/js/plugins/metismenu.js"></script>
-    <script defer src="assets/js/vendor/contact-form.js"></script>
     <script defer src="assets/js/vendor/bootstrap.min.js"></script>
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js?version=1"
-      integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D"
-      crossorigin="anonymous"
-      defer
-    ></script>
     <script defer src="assets/js/main.js"></script>
     <script src="./assets/js/weather.js "></script>
   </body>
