--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Luminos - IT solutions for a growing businesses."
+      content="Experience golf at its finest at Stagg Hill Golf Club in Manhattan, KS!"
     />
     <link
       rel="shortcut icon"
@@ -22,18 +22,12 @@
     />
     <link
       rel="stylesheet preload"
-      href="assets/css/plugins/fontawesome.css"
-      as="style"
-      media="print"
-      onload="this.media='all'"
-    />
-    <link
-      rel="stylesheet preload"
       href="assets/css/plugins/metismenu.css"
       as="style"
       media="print"
       onload="this.media='all'"
     />
+     
     <link rel="stylesheet preload" href="css/style.css" as="style" />
 
     <script defer src="assets/js/plugins/svg-inject.js"></script>
@@ -805,6 +799,26 @@
       <div class="loader-section section-left"></div>
       <div class="loader-section section-right"></div>
     </div>
+
+      <!-- progress area start -->
+    <div class="progress-wrap">
+      <svg
+        class="progress-circle svg-content"
+        width="100%"
+        height="100%"
+        viewBox="-1 -1 102 102"
+      >
+        <path
+          d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98"
+          style="
+            transition: stroke-dashoffset 10ms linear 0s;
+            stroke-dasharray: 307.919, 307.919;
+            stroke-dashoffset: 307.919;
+          "
+        ></path>
+      </svg>
+    </div>
+    <!-- progress area end -->
 
     <!-- 🟡🟡🟡🟡🟡🟡 MOBILE MENU MARKUP START 🟡🟡🟡🟡🟡🟡 -->
     <div id="side-bar" class="side-bar header-two" dir="ltr">
