--- a/scorecard.html
+++ b/scorecard.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Luminos - IT solutions for a growing businesses."
+      content="Stagg Hill Golf Club's scorecard for your perusal."
     />
     <link
       rel="shortcut icon"
@@ -24,18 +24,12 @@
     />
     <link
       rel="stylesheet preload"
-      href="assets/css/plugins/fontawesome.css"
-      as="style"
-      media="print"
-      onload="this.media='all'"
-    />
-    <link
-      rel="stylesheet preload"
       href="assets/css/plugins/metismenu.css"
       as="style"
       media="print"
       onload="this.media='all'"
     />
+     
     <link rel="stylesheet preload" href="css/style.css" as="style" />
 
     <!-- header Lit component -->
