Additional optimizations made.

--- a/scorecard.html
+++ b/scorecard.html
@@ -29,7 +29,7 @@
       media="print"
       onload="this.media='all'"
     />
-     
+
     <link rel="stylesheet preload" href="css/style.css" as="style" />
 
     <!-- header Lit component -->
@@ -80,12 +80,12 @@
         data-wow-offset="120"
         data-wow-delay=".9s"
       >
-        <a class="scorecard-image-link" href="images/Stagg-Hill-Scorecard.jpg" target="_blank">
-          <img
-            src="images/Stagg-Hill-Scorecard-cropped.jpg"
-            class=""
-            alt=""
-          />
+        <a
+          class="scorecard-image-link"
+          href="images/Stagg-Hill-Scorecard.jpg"
+          target="_blank"
+        >
+          <img src="images/Stagg-Hill-Scorecard-cropped.jpg" class="" alt="" />
         </a>
       </div>
     </section>
@@ -122,6 +122,17 @@
             stroke-dashoffset: 307.919;
           "
         ></path>
+      </svg>
+      <svg
+        class="chevron"
+        id="Layer_1"
+        xmlns="http://www.w3.org/2000/svg"
+        version="1.1"
+        viewBox="0 0 294 294"
+      >
+        <path
+          d="M259.9,215.4l-112.9-112.9-112.9,112.9-30.2-30.2,112.9-112.9c16.7-16.7,43.7-16.7,60.3,0l112.9,112.9-30.2,30.2Z"
+        />
       </svg>
     </div>
     <!-- progress area end -->
