--- a/calendar.html
+++ b/calendar.html
@@ -27,7 +27,7 @@
       media="print"
       onload="this.media='all'"
     />
-     
+
     <link rel="stylesheet preload" href="css/style.css" as="style" />
 
     <!-- header Lit component -->
@@ -39,7 +39,7 @@
     <!-- footer Lit component -->
     <script type="module" src="./lit/footer.js"></script>
 
-     <!-- fullCalendar -->
+    <!-- fullCalendar -->
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.17/index.global.min.js"></script>
     <!-- fullCalendar initiation -->
     <script src="assets/js/calendarBuilder.js"></script>
@@ -147,12 +147,6 @@
     <footer>
       <my-footer></my-footer>
     </footer>
-    <!-- pre loader area start -->
-    <div class="loader-wrapper">
-      <div class="loader"></div>
-      <div class="loader-section section-left"></div>
-      <div class="loader-section section-right"></div>
-    </div>
 
     <!-- progress area start -->
     <div class="progress-wrap">
@@ -171,8 +165,20 @@
           "
         ></path>
       </svg>
+      <svg
+        class="chevron"
+        id="Layer_1"
+        xmlns="http://www.w3.org/2000/svg"
+        version="1.1"
+        viewBox="0 0 294 294"
+      >
+        <path
+          d="M259.9,215.4l-112.9-112.9-112.9,112.9-30.2-30.2,112.9-112.9c16.7-16.7,43.7-16.7,60.3,0l112.9,112.9-30.2,30.2Z"
+        />
+      </svg>
     </div>
     <!-- progress area end -->
+
     <!-- 🟡🟡🟡🟡🟡🟡 MOBILE MENU MARKUP START 🟡🟡🟡🟡🟡🟡 -->
     <div id="side-bar" class="side-bar header-two" dir="ltr">
       <button class="close-icon-menu" aria-label="footer_Button">
