--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
       media="print"
       onload="this.media='all'"
     />
-     
+
     <link rel="stylesheet preload" href="css/style.css" as="style" />
 
     <!-- header Lit component -->
@@ -185,7 +185,7 @@
           data-wow-delay=".1s"
         >
           <div class="row">
-            <div class="col-lg-12"> 
+            <div class="col-lg-12">
               <div class="text-center-title-bg-white text-center">
                 <h2 class="title">Get in touch</h2>
                 <p>We’d love to hear from you!</p>
@@ -193,7 +193,7 @@
             </div>
             <div class="col-lg-12">
               <form class="contact-form" id="contact-form">
-                  <div class="message-sent-box">
+                <div class="message-sent-box">
                   <div class="row text-center flex-column align-items-center">
                     <div class="image-orb">
                       <img src="assets/images/icons/message-sent.svg" alt="" />
@@ -336,6 +336,17 @@
             stroke-dashoffset: 307.919;
           "
         ></path>
+      </svg>
+      <svg
+        class="chevron"
+        id="Layer_1"
+        xmlns="http://www.w3.org/2000/svg"
+        version="1.1"
+        viewBox="0 0 294 294"
+      >
+        <path
+          d="M259.9,215.4l-112.9-112.9-112.9,112.9-30.2-30.2,112.9-112.9c16.7-16.7,43.7-16.7,60.3,0l112.9,112.9-30.2,30.2Z"
+        />
       </svg>
     </div>
     <!-- progress area end -->
