--- a/couples-league.html
+++ b/couples-league.html
@@ -27,7 +27,7 @@
       media="print"
       onload="this.media='all'"
     />
-     
+
     <link rel="stylesheet preload" href="css/style.css" as="style" />
 
     <!-- header Lit component -->
@@ -361,6 +361,17 @@
             stroke-dashoffset: 307.919;
           "
         ></path>
+      </svg>
+      <svg
+        class="chevron"
+        id="Layer_1"
+        xmlns="http://www.w3.org/2000/svg"
+        version="1.1"
+        viewBox="0 0 294 294"
+      >
+        <path
+          d="M259.9,215.4l-112.9-112.9-112.9,112.9-30.2-30.2,112.9-112.9c16.7-16.7,43.7-16.7,60.3,0l112.9,112.9-30.2,30.2Z"
+        />
       </svg>
     </div>
     <!-- progress area end -->
