--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       media="print"
       onload="this.media='all'"
     />
-     
+
     <link rel="stylesheet preload" href="css/style.css" as="style" />
 
     <script defer src="assets/js/plugins/svg-inject.js"></script>
@@ -244,7 +244,7 @@
 
               <div class="inner-content-area d-flex">
                 <div class="top-area">
-                  <h3 class="title animated fadeIn">Closing for a Day</h3>
+                  <h3 class="title ">Single Day Closing</h3>
 
                   <p>
                     Stagg Hill will be closed on
@@ -273,7 +273,7 @@
 
                 <div class="inner-content-area d-flex">
                   <div class="top-area">
-                    <h3 class="title animated fadeIn">
+                    <h3 class="title ">
                       Help us build a Short Game Facility!
                     </h3>
 
@@ -347,7 +347,7 @@
 
                 <div class="inner-content-area d-flex">
                   <div class="top-area">
-                    <h3 class="title animated fadeIn">New Pro Shop Page!</h3>
+                    <h3 class="title ">New Pro Shop Page!</h3>
 
                     <p>Click <u>here</u> to check out the new pro shop page.</p>
                     <hr />
@@ -404,7 +404,7 @@
 
                 <div class="inner-content-area d-flex">
                   <div class="top-area">
-                    <h3 class="title animated fadeIn">
+                    <h3 class="title ">
                       Renew Your Handicap Online
                     </h3>
 
@@ -453,7 +453,7 @@
 
                 <div class="inner-content-area d-flex">
                   <div class="top-area">
-                    <h3 class="title animated fadeIn">
+                    <h3 class="title ">
                       Manhattan Junior Golf Association
                     </h3>
 
@@ -507,7 +507,7 @@
 
                 <div class="inner-content-area d-flex">
                   <div class="top-area">
-                    <h3 class="title animated fadeIn">Drive, Chip, & Putt</h3>
+                    <h3 class="title ">Drive, Chip, & Putt</h3>
                     <h6>Registration Now Open!</h6>
                     <p>
                       The 2025-26 season of qualifying for Drive, Chip and Putt
@@ -800,7 +800,7 @@
       <div class="loader-section section-right"></div>
     </div>
 
-      <!-- progress area start -->
+    <!-- progress area start -->
     <div class="progress-wrap">
       <svg
         class="progress-circle svg-content"
@@ -816,6 +816,17 @@
             stroke-dashoffset: 307.919;
           "
         ></path>
+      </svg>
+      <svg
+        class="chevron"
+        id="Layer_1"
+        xmlns="http://www.w3.org/2000/svg"
+        version="1.1"
+        viewBox="0 0 294 294"
+      >
+        <path
+          d="M259.9,215.4l-112.9-112.9-112.9,112.9-30.2-30.2,112.9-112.9c16.7-16.7,43.7-16.7,60.3,0l112.9,112.9-30.2,30.2Z"
+        />
       </svg>
     </div>
     <!-- progress area end -->
