--- a/instruction.html
+++ b/instruction.html
@@ -5,10 +5,7 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Learn a little or a lot about golf."
-    />
+    <meta name="description" content="Learn a little or a lot about golf." />
     <link
       rel="shortcut icon"
       type="image/x-icon"
@@ -29,7 +26,7 @@
       media="print"
       onload="this.media='all'"
     />
-     
+
     <link rel="stylesheet preload" href="css/style.css" as="style" />
 
     <!-- header Lit component -->
@@ -213,8 +210,6 @@
           data-masonry='{"percentPosition": true }'
           style="visibility: visible; animation-name: fadeInUp"
         >
-          
-
           <div class="col-md-6 col-sm-12">
             <div class="single-blog-area-start">
               <a
@@ -352,6 +347,17 @@
             stroke-dashoffset: 307.919;
           "
         ></path>
+      </svg>
+      <svg
+        class="chevron"
+        id="Layer_1"
+        xmlns="http://www.w3.org/2000/svg"
+        version="1.1"
+        viewBox="0 0 294 294"
+      >
+        <path
+          d="M259.9,215.4l-112.9-112.9-112.9,112.9-30.2-30.2,112.9-112.9c16.7-16.7,43.7-16.7,60.3,0l112.9,112.9-30.2,30.2Z"
+        />
       </svg>
     </div>
     <!-- progress area end -->
