--- a/meet-the-staff.html
+++ b/meet-the-staff.html
@@ -29,7 +29,7 @@
       media="print"
       onload="this.media='all'"
     />
-     
+
     <link rel="stylesheet preload" href="css/style.css" as="style" />
 
     <!-- header Lit component -->
@@ -145,7 +145,17 @@
                         aria-controls="collapseExample"
                       >
                         Show More
-                        <i class="fa-duotone fa-regular fa-chevron-down"></i>
+                        <svg
+                          class="chevron"
+                          id="Layer_1"
+                          xmlns="http://www.w3.org/2000/svg"
+                          version="1.1"
+                          viewBox="0 0 294 294"
+                        >
+                          <path
+                            d="M259.9,215.4l-112.9-112.9-112.9,112.9-30.2-30.2,112.9-112.9c16.7-16.7,43.7-16.7,60.3,0l112.9,112.9-30.2,30.2Z"
+                          />
+                        </svg>
                       </button>
                     </p>
                   </div>
@@ -255,7 +265,17 @@
                         aria-controls="collapseExample2"
                       >
                         Show More
-                        <i class="fa-duotone fa-regular fa-chevron-down"></i>
+                        <svg
+                          class="chevron"
+                          id="Layer_1"
+                          xmlns="http://www.w3.org/2000/svg"
+                          version="1.1"
+                          viewBox="0 0 294 294"
+                        >
+                          <path
+                            d="M259.9,215.4l-112.9-112.9-112.9,112.9-30.2-30.2,112.9-112.9c16.7-16.7,43.7-16.7,60.3,0l112.9,112.9-30.2,30.2Z"
+                          />
+                        </svg>
                       </button>
                     </p>
                   </div>
@@ -461,6 +481,17 @@
             stroke-dashoffset: 307.919;
           "
         ></path>
+      </svg>
+      <svg
+        class="chevron"
+        id="Layer_1"
+        xmlns="http://www.w3.org/2000/svg"
+        version="1.1"
+        viewBox="0 0 294 294"
+      >
+        <path
+          d="M259.9,215.4l-112.9-112.9-112.9,112.9-30.2-30.2,112.9-112.9c16.7-16.7,43.7-16.7,60.3,0l112.9,112.9-30.2,30.2Z"
+        />
       </svg>
     </div>
     <!-- progress area end -->
