--- a/open-tournaments.html
+++ b/open-tournaments.html
@@ -28,7 +28,7 @@
       media="print"
       onload="this.media='all'"
     />
-     
+
     <link rel="stylesheet preload" href="css/style.css" as="style" />
 
     <!-- header Lit component -->
@@ -336,8 +336,13 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="title-center-2">
-              <h3 class="title">Thank You to Our 2025 Tournament <br class="title-br"/>Sponsors!</h3>
-              <div class="schedule-note schedule-note-sponsors-on-ot-page mt-5 text-center">
+              <h3 class="title">
+                Thank You to Our 2025 Tournament
+                <br class="title-br" />Sponsors!
+              </h3>
+              <div
+                class="schedule-note schedule-note-sponsors-on-ot-page mt-5 text-center"
+              >
                 If you are interested in becoming a tournament sponsor
                 <a
                   href="https://www.stagghillgolfclub.com/docs/2025%20SPONSORSHIP%20OPPORTUNITIES.pdf"
@@ -529,6 +534,17 @@
             stroke-dashoffset: 307.919;
           "
         ></path>
+      </svg>
+      <svg
+        class="chevron"
+        id="Layer_1"
+        xmlns="http://www.w3.org/2000/svg"
+        version="1.1"
+        viewBox="0 0 294 294"
+      >
+        <path
+          d="M259.9,215.4l-112.9-112.9-112.9,112.9-30.2-30.2,112.9-112.9c16.7-16.7,43.7-16.7,60.3,0l112.9,112.9-30.2,30.2Z"
+        />
       </svg>
     </div>
     <!-- progress area end -->
