Updating Folds of Honor tourney.

--- a/open-tournaments.html
+++ b/open-tournaments.html
@@ -182,49 +182,25 @@
                   </div>
                 </div>
 
-                <div class="single-consulting-one">
+                <div class="single-consulting-one expired">
                   <div class="right-area">
                     <h4>1 Couple Scramble</h4>
                     <p>Saturday, July 12th, 9am</p>
-                    <a
-                      href="https://manager.gallusgolf.com/Register/67527/stagg-hill-couples-tournament"
-                      class="pillock"
-                      target="_blank"
-                    >
-                      <img
-                        class="pillock-icon register injectable"
-                        src="assets/images/svgs/register.svg"
-                        alt=""
-                      />
-                      Register
-                    </a>
                   </div>
                   <div class="timeline-dot">
                     <div class="time-line-circle"></div>
                   </div>
                 </div>
-                <div class="single-consulting-one">
+                <div class="single-consulting-one expired">
                   <div class="right-area">
                     <h4>Night Golf</h4>
                     <p>Friday, August 22nd, 8:30pm SG</p>
-                    <a
-                      href="https://manager.gallusgolf.com/Register/53233/night-golf"
-                      class="pillock"
-                      target="_blank"
-                    >
-                      <img
-                        class="pillock-icon register injectable"
-                        src="assets/images/svgs/register.svg"
-                        alt=""
-                      />
-                      Sign Up
-                    </a>
                   </div>
                   <div class="timeline-dot">
                     <div class="time-line-circle"></div>
                   </div>
                 </div>
-                <div class="single-consulting-one">
+                <div class="single-consulting-one expired">
                   <div class="right-area">
                     <h4>Night Golf 4 Person Scramble</h4>
                     <p>Sunday, August 31st, 9am SG</p>
@@ -234,12 +210,12 @@
                   </div>
                 </div>
 
-                <div class="single-consulting-one">
+                <div class="single-consulting-one expired">
                   <div class="right-area">
                     <h4>Folds of Honor 4 Person Scramble</h4>
                     <p>Sunday, August 31st, 9am SG</p>
                     <a
-                      href="https://manager.gallusgolf.com/Register/67530/folds-of-honor-4-scramble"
+                      href="https://manager.gallusgolf.com/Tournament/Leaderboard/First/67530"
                       class="pillock"
                       target="_blank"
                     >
@@ -248,7 +224,7 @@
                         src="assets/images/svgs/register.svg"
                         alt=""
                       />
-                      Register
+                      Results
                     </a>
                   </div>
                   <div class="timeline-dot">
