Updating tournaments and deals.

--- a/index.html
+++ b/index.html
@@ -233,26 +233,52 @@
         >
           <div class="col-md-6 col-sm-12">
             <div class="single-blog-area-start border-left">
-              <div class="image-area">
-                <img
-                  loading="lazy"
-                  rel="preload"
-                  src="assets/images/news/train.jpg"
-                  alt=""
-                />
-              </div>
-
-              <div class="inner-content-area d-flex">
-                <div class="top-area">
-                  <h3 class="title">Single Day Closing</h3>
-
-                  <p>
-                    Stagg Hill will be closed on
-                    <span class="highlighted">August 25th</span> due to rail
-                    road construction.
-                  </p>
+              <a
+                href="https://manager.gallusgolf.com/Register/67532/swinney-wickham-4-scramble-2025"
+                target="_blank"
+                class="thumbnail"
+              >
+                <div class="image-area">
+                  <img
+                    loading="lazy"
+                    rel="preload"
+                    src="https://s3.amazonaws.com/data.gallusgolf.com/files/1169/a93ac138c46c4a7c85ee9a893b09dcd9.jpg"
+                    alt=""
+                  />
                 </div>
-              </div>
+
+                <div class="inner-content-area d-flex">
+                  <div class="top-area">
+                    <h3 class="title">
+                      6th Annual Swinney / Wickham Memorial Benefit Tournament
+                    </h3>
+                    <h6>Sunday September 21st</h6>
+                    <p style="margin-bottom: 14px; margin-top: 16px">Format: 4 Person Scramble</p>
+                    <p>
+                      Entry Fee: $75pp includes golf, cart, range, lunch, cash
+                      flight prizes, and raffle tickets. Proceeds go to course
+                      improvements.
+                    </p>
+                  </div>
+                  <div class="row link-bar flex-row">
+                    <div>Click here to sign-up</div>
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="32"
+                      height="32"
+                      viewBox="0 0 32 32"
+                    >
+                      <path
+                        d="M9.3335 22.6667L22.6668 9.33337M22.6668 9.33337H9.3335M22.6668 9.33337V22.6667"
+                        stroke="#999999"
+                        stroke-width="1.5"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      ></path>
+                    </svg>
+                  </div>
+                </div>
+              </a>
             </div>
           </div>
           <div class="col-md-6 col-sm-12">
@@ -358,8 +384,8 @@
                         />
                         August Pro Shop Specials
                       </h5>
-                      <p class="deal">1/2 Price Shorts and Skorts</p>
-                      <p class="deal">25% OFF In-Stock Golf Shoes</p>
+                      <p class="deal">40% OFF Adidas Shoes in Stock</p>
+                      <p class="deal">25% OFF T-Shirts in Stock</p>
                     </div>
                   </div>
                   <div class="row link-bar flex-row">
