--- a/pro-shop.html
+++ b/pro-shop.html
@@ -139,8 +139,8 @@
                     />
                     August Pro Shop Specials
                   </h5>
-                  <p class="deal">1/2 Price Shorts and Skorts</p>
-                  <p class="deal">25% OFF In-Stock Golf Shoes</p>
+                  <p class="deal">40% OFF Adidas Shoes in Stock</p>
+                  <p class="deal">25% OFF T-Shirts in Stock</p>
                 </div>
               </div>
             </div>
