--- a/membership-fees.html
+++ b/membership-fees.html
@@ -83,7 +83,7 @@
           >
             <div class="row table-preface justify-content-between">
               <div class="col-12 col-md-8 col-lg-6">
-                <h3>2025 Membership Pricing</h3>
+                <h3>2025 Annual Membership Pricing</h3>
                 <a
                   href="assets/pdfs/2025-Membership-Application.pdf"
                   class="pillock"
@@ -135,7 +135,8 @@
                 </tr>
                 <tr>
                   <th scope="row">
-                    <div class="th-wrap">Bogey (Annual Greens Fees)</div>
+                    <div class="th-wrap">Bogey</div>
+                    <div class="note">Greens Fees</div>
                   </th>
                   <td>$790</td>
                   <td>$1180</td>
@@ -143,8 +144,9 @@
                 <tr>
                   <th scope="row">
                     <div class="th-wrap">
-                      Par (Annual Greens Fees and Driving Range)
+                      Par
                     </div>
+                    <div class="note">Greens Fees and Driving Range</div>
                   </th>
                   <td>$1025</td>
                   <td>$1540</td>
@@ -152,7 +154,20 @@
                 <tr>
                   <th scope="row">
                     <div class="th-wrap">
-                      Eagle (Annual Greens Fees, Driving Range, and Cart Usage)
+                      Birdie 
+                    </div>
+                    <div class="note">Greens Fees and Cart Usage</div>
+                  </th>
+                  <td>$1495</td>
+                  <td>$2160</td>
+                </tr>
+                <tr>
+                  <th scope="row">
+                    <div class="th-wrap">
+                      Eagle 
+                    </div>
+                    <div class="note">
+                      Greens Fees, Driving Range, and Cart Usage
                     </div>
                   </th>
                   <td>$1730</td>
@@ -210,7 +225,7 @@
                   come along with these membership types. These rates are for
                   Annual Green Fees only. These membership types are eligible
                   for the Par, Birdie, or Eagle options at an aditional cost
-                  comperable to the other membership types.
+                  comparable to the other membership types.
                 </p>
                 <p>
                   All Membership Fees can be paid on an annual or a monthly
