--- a/index.html
+++ b/index.html
@@ -233,34 +233,37 @@
         >
           <div class="col-md-6 col-sm-12">
             <div class="single-blog-area-start border-left">
-              <a
-                href="https://manager.gallusgolf.com/Register/67532/swinney-wickham-4-scramble-2025"
-                target="_blank"
-                class="thumbnail"
-              >
-                <div class="image-area">
-                  <img
-                    loading="lazy"
-                    rel="preload"
-                    src="https://s3.amazonaws.com/data.gallusgolf.com/files/1169/a93ac138c46c4a7c85ee9a893b09dcd9.jpg"
-                    alt=""
-                  />
-                </div>
+              <div class="image-area">
+                <img
+                  loading="lazy"
+                  rel="preload"
+                  src="https://s3.amazonaws.com/data.gallusgolf.com/files/1169/a93ac138c46c4a7c85ee9a893b09dcd9.jpg"
+                  alt=""
+                />
+              </div>
 
-                <div class="inner-content-area d-flex">
-                  <div class="top-area">
-                    <h3 class="title">
-                      6th Annual Swinney / Wickham Memorial Benefit Tournament
-                    </h3>
-                    <h6>Sunday September 21st</h6>
-                    <p style="margin-bottom: 14px; margin-top: 16px">Format: 4 Person Scramble</p>
-                    <p>
-                      Entry Fee: $75pp includes golf, cart, range, lunch, cash
-                      flight prizes, and raffle tickets. Proceeds go to course
-                      improvements.
-                    </p>
-                  </div>
-                  <div class="row link-bar flex-row">
+              <div class="inner-content-area d-flex">
+                <div class="top-area">
+                  <h3 class="title">Stagg Hill Annual Meeting</h3>
+                  <h6>Thursday November 20th</h6>
+                  <p>
+                    Location: Blue Hills Room. There are 3 Board seats
+                    available. If you would like to run for the board, please
+                    contact Nominating Committee Chair Brenda Neel at
+                    <a
+                      href="mailto:bk_beek@yahoo.com"
+                      style="display: inline; text-decoration: underline"
+                      >bk_beek@yahoo.com</a
+                    >
+                    or Marlin Whitney at
+                    <a
+                      href="mailto:marlinwhitney1@yahoo.com"
+                      style="display: inline; text-decoration: underline"
+                      >marlinwhitney1@yahoo.com </a
+                    >. More details to follow.
+                  </p>
+                </div>
+                <!-- <div class="row link-bar flex-row">
                     <div>Click here to sign-up</div>
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
@@ -276,9 +279,8 @@
                         stroke-linejoin="round"
                       ></path>
                     </svg>
-                  </div>
-                </div>
-              </a>
+                  </div> -->
+              </div>
             </div>
           </div>
           <div class="col-md-6 col-sm-12">
@@ -333,7 +335,9 @@
                       on a permanent plaque next to the short game area. If you
                       are willing to help improve our facilities by donating
                       please reach out to Chad Myers, PGA. 785-539-1041 or
-                      chad@stagghillgolfclub.com
+                      <span style="text-decoration: underline"
+                        >chad@stagghillgolfclub.com</span
+                      >.
                     </p>
                   </div>
                   <div class="row link-bar flex-row">
@@ -382,7 +386,7 @@
                           class="injectable fire-icon"
                           alt=""
                         />
-                        August Pro Shop Specials
+                        Current Pro Shop Specials
                       </h5>
                       <p class="deal">40% OFF Adidas Shoes in Stock</p>
                       <p class="deal">25% OFF T-Shirts in Stock</p>
