Added results link under Swinney/Wickham tourney.

--- a/open-tournaments.html
+++ b/open-tournaments.html
@@ -221,7 +221,7 @@
                     >
                       <img
                         class="pillock-icon register injectable"
-                        src="assets/images/svgs/register.svg"
+                        src="assets/images/svgs/results.svg"
                         alt=""
                       />
                       Results
@@ -232,21 +232,21 @@
                   </div>
                 </div>
 
-                <div class="single-consulting-one">
+                <div class="single-consulting-one expired">
                   <div class="right-area">
                     <h4>Swinney/Wickham Memorial 4 Person Scramble</h4>
                     <p>Sunday, September 21st, 9am SG</p>
                     <a
-                      href="https://manager.gallusgolf.com/Register/67532/swinney-wickham-4-scramble-2025"
+                      href="https://manager.gallusgolf.com/Tournament/Leaderboard/First/67532"
                       class="pillock"
                       target="_blank"
                     >
                       <img
                         class="pillock-icon register injectable"
-                        src="assets/images/svgs/register.svg"
+                        src="assets/images/svgs/results.svg"
                         alt=""
                       />
-                      Register
+                      Results
                     </a>
                   </div>
                   <div class="timeline-dot">
