Updating News item.

--- a/index.html
+++ b/index.html
@@ -251,9 +251,9 @@
                     available. If you would like to run for the board, please
                     contact Nominating Committee Chair Brenda Neel at
                     <a
-                      href="mailto:bk_beek@yahoo.com"
+                      href="mailto:bk_neel@yahoo.com"
                       style="display: inline; text-decoration: underline"
-                      >bk_beek@yahoo.com</a
+                      >bk_neel@yahoo.com</a
                     >
                     or Marlin Whitney at
                     <a
