Updating Stagg Hill Annual Meeting notice.

--- a/index.html
+++ b/index.html
@@ -246,21 +246,33 @@
                 <div class="top-area">
                   <h3 class="title">Stagg Hill Annual Meeting</h3>
                   <h6>Thursday November 20th</h6>
+                  <p>Location: The Blue Hills Room at Stagg Hill Golf Course.</p>
                   <p>
-                    Location: Blue Hills Room. There are 3 Board seats
-                    available. If you would like to run for the board, please
-                    contact Nominating Committee Chair Brenda Neel at
+                    There are 3 Board seats available. If you would like to run
+                    for the board, please contact Nominating Committee Chair
+                    Brenda Neel at
                     <a
                       href="mailto:bk_neel@yahoo.com"
-                      style="display: inline; text-decoration: underline"
                       >bk_neel@yahoo.com</a
                     >
                     or Marlin Whitney at
                     <a
                       href="mailto:marlinwhitney1@yahoo.com"
-                      style="display: inline; text-decoration: underline"
                       >marlinwhitney1@yahoo.com </a
-                    >. More details to follow.
+                    >.
+                  </p>
+                  <p>
+                    We will be hosting a taco bar for all attendees beginning at
+                    6pm with the meeting starting at 7pm. Members that are
+                    active and paid an initiation fee are eligible to come to
+                    the meeting. We are asking that if you are coming for the
+                    dinner to please sign up
+                    <a
+                      href="https://form.jotform.com/252954187193164"
+                      target="_blank"
+                      style="display: inline; text-decoration: underline"
+                      >here</a
+                    >.
                   </p>
                 </div>
                 <!-- <div class="row link-bar flex-row">
